--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   </fieldset>
 
                   <div class="img-upload__preview">
-                    <img src="img/upload-default-image.jpg" alt="Предварительный просмотр фотографии">
+                    <img class="effects__preview--none" src="img/upload-default-image.jpg" alt="Предварительный просмотр фотографии">
                   </div>
 
                   <fieldset class="img-upload__scale scale">
