--- a/index.html
+++ b/index.html
@@ -206,6 +206,10 @@
       </div>
     </div>
   </template>
-  <script src="js/pictures.js"></script>
+  <script src="js/utilits.js"></script>
+  <script src="js/generate-pictures.js"></script>
+  <script src="js/paste-pictures.js"></script>
+  <script src="js/big-picture.js"></script>
+  <script src="js/upload-form.js"></script>
 </body>
 </html>
