--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
     </div>
   </template>
   <script src="js/utilits.js"></script>
-  <script src="js/generate-pictures.js"></script>
-  <script src="js/paste-pictures.js"></script>
-  <script src="js/big-picture.js"></script>
-  <script src="js/upload-form.js"></script>
+  <script src="js/data.js"></script>
+  <script src="js/pictures.js"></script>
+  <script src="js/preview.js"></script>
+  <script src="js/form.js"></script>
 </body>
 </html>
