Исправил названия функций

--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
     </div>
   </template>
   <script src="js/utilits.js"></script>
-  <script src="js/data.js"></script>
+  <script src="js/get-data.js"></script>
+  <script src="js/show-preview.js"></script>
   <script src="js/pictures.js"></script>
-  <script src="js/preview.js"></script>
   <script src="js/form.js"></script>
 </body>
 </html>
