Закончил полностью задание 'Перламутровые пуговицы'

--- a/index.html
+++ b/index.html
@@ -209,7 +209,9 @@
   <script src="js/utilits.js"></script>
   <script src="js/backend.js"></script>
   <script src="js/show-preview.js"></script>
-  <script src="js/pictures.js"></script>
+  <script src="js/render-pictures.js"></script>
+  <script src="js/gallery.js"></script>
+  <script src="js/filters.js"></script>
   <script src="js/form.js"></script>
 </body>
 </html>
