Закончил задание 'Шэр, лайк'

--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
   <script src="js/render-pictures.js"></script>
   <script src="js/gallery.js"></script>
   <script src="js/filters.js"></script>
+  <script src="js/image-upload.js"></script>
   <script src="js/form.js"></script>
 </body>
 </html>
